[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--cov=yaba",
    # generate report with details of all (non-pass) test results
    "-ra",
    # show local variables in tracebacks
    "--showlocals",
    # report formatting changes suggested by black
    # "--black",
    # report linting issues with flake8
    # "--flake8",
    # verbose output
    "--verbose",
]
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "migrations",
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 89
target-version = ['py310']
include = '\.pyi?$'
exclude =  '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | .venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disable_error_code = "attr-defined"