[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--cov=monet",
    # generate report with details of all (non-pass) test results
    "-ra",
    # show local variables in tracebacks
    "--showlocals",
    # verbose output
    "--verbose",
]
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "migrations",
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude =  '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | .venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
plugins = "sqlalchemy.ext.mypy.plugin"

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
# disallow_subclassing_any = true
# disallow_untyped_decorators = true
# disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
# warn_return_any = true

[[tool.mypy.overrides]]
module = "flask_admin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_restx.*"
ignore_missing_imports = true