[metadata]
name = yaba
version = attr: yaba.__version__
author = kira607
author_email = kirill.lesckin@gmail.com
url = https://github.com/kira607/yaba
description = A web app for budget planning.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = budget, web, app
classifiers =
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/kira607/yaba/issues
    Changelog = https://github.com/kira607/yaba/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.8
package_dir =
    =src
packages = find:
test_suite = tests
setup_requires =
    setuptools>=46.4.0
install_requires =
    flask
    flask-admin
    flask-sqlalchemy
    flask-login
    gitpython

[options.package_data]
yaba = py.typed

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-mock
    pytest-cov
    mypy
    flake-8
    tox

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 120
doctests = True
exclude =
        build/,
        dist/,
        docs/,
        .git,
        .eggs,
        __pycache__,
        *.egg-info,
        .gitignore,
        README.md
inline-quotes = '
multiline-quotes = '''
docstring-quotes = '''
ignore =
        ANN101 ; Missing type annotation for self in method
        ANN102 ; Missing type annotation for cls in classmethod
        ANN002 ; Missing type annotation for *args
        ANN003 ; Missing type annotation for **kwargs
        R504   ; you shouldn`t assign value to variable if it will be use only as return value
        W503   ; Line break occurred before a binary operator
        D100   ; Missing docstring in public module
        D300   ; Use """triple double quotes"""
        D107   ; Missing docstring in __init__
per-file-ignores =
    *__init__.py:F401
count = true

[isort]
skip =
        build/,
        dist/,
        docs/,
        .git,
        .eggs,
        __pycache__,
        *.egg-info,
        .gitignore,
        README.md
# known_local_folder = rnmds_hil_sil_daemon
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
py_version = 38
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
